--- a/style.css
+++ b/style.css
@@ -96,7 +96,8 @@ body {
 
 /* Background images */
 .slide:first-child {
-  background: url('./images/photo1.jpeg') no-repeat center center/cover;
+  background: url('./images/photo1.jpeg') no-repeat center/cover;
+  background-size: auto;
 }
 
 .slide:nth-child(2) {
