--- a/style.css
+++ b/style.css
@@ -97,25 +97,30 @@ body {
 /* Background images */
 .slide:first-child {
   background: url('./images/photo1.jpeg') no-repeat center/cover;
-  background-size: auto;
+  background-size: 100%;
 }
 
 .slide:nth-child(2) {
   background: url('./images/photo2.jpeg') no-repeat center center/cover;
+  background-size: 100%;
 }
 
 .slide:nth-child(3) {
   background: url('./images/photo3.jpeg') no-repeat center center/cover;
+  background-size: 100%;
 }
 
 .slide:nth-child(4) {
   background: url('./images/photo4.jpeg') no-repeat center center/cover;
+  background-size: 100%;
 }
 
 .slide:nth-child(5) {
   background: url('./images/photo5.jpeg') no-repeat center center/cover;
+  background-size: 100%;
 }
 
 .slide:nth-child(6) {
   background: url('./images/photo6.jpeg') no-repeat center center/cover;
+  background-size: 100%;
 }
